fix padding on grid, align bio text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,13 +66,15 @@ header nav ul li {
 .work-wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+     align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .my-work {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(2 1fr);
+    grid-template-rows: 1fr 1fr;
     width: 80%;
 }
 
@@ -82,7 +84,7 @@ header nav ul li {
 }
 
 .work {
-    margin: 20px;
+    margin: 8px;
     border: 2px solid #66403C;
     height: 200px; 
 }
@@ -102,7 +104,7 @@ header nav ul li {
 
 .work-size {
     border: 2px solid #66403C;
-    margin: 20px;
+    margin: 8px;
 }
 
 .work-2 {
@@ -117,6 +119,7 @@ header nav ul li {
     background-size: cover;
     position: relative;
     height: 200px;
+    justify-self: center; 
 }
 
 .work-4 {
@@ -126,12 +129,15 @@ header nav ul li {
     height: 200px;
 }
 
+
 .flex-bio {
-    padding: 20px;
-    text-align: center; 
+    padding: 10px;
+    display: flex; 
+    align-items: center;
 }
 
 .flex-bio img {
     height: 300px;
     width: 300px;
-}
+    padding: 10px;
+} 
